--- a/tails_mobile/package.json
+++ b/tails_mobile/package.json
@@ -21,8 +21,10 @@
     "react": "^18.2.0",
     "react-native": "0.71.3",
     "react-native-plaid-link-sdk": "8.0.1",
+    "react-native-qrcode-svg": "^6.2.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
+    "react-native-svg": "^13.8.0",
     "react-native-vector-icons": "^9.2.0",
     "scheduler": "^0.23.0",
     "use-context-selector": "^1.4.1"
